# AeroShield-3D

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  opencode.json  skills-lock.json
backend/: .env.example  Cargo.toml
backend/src/: airports.rs  aviationweather.rs  lib.rs  main.rs  models.rs  opensky.rs  risk.rs  routes.rs  sse.rs  state.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DIAGRAMS.md  IMPROVEMENT-PLAN.md  TECHNICAL.md  architecture.md
docs/adr/: ADR-001-sse-over-websocket.md  ADR-002-primitive-collections.md  ADR-003-moka-caching.md  ADR-004-sse-delta-push.md  ADR-005-mobile-route.md  ADR-006-geo-crate.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: global.d.ts  main.tsx
frontend/src/components/: AirportsLayer.tsx  BootSequence.tsx  CesiumGlobe.tsx  FlightDetailPanel.tsx  FlightLayer.tsx  FlightPredictLayer.tsx  FlightTrailLayer.tsx  FlightsPanel.tsx  GlobeControlBar.tsx  HazardLayer.tsx  HazardPanel.tsx  HudBar.tsx  LegendDialog.tsx  OffscreenIndicator.tsx  RadarSweepLayer.tsx  RerouteLayer.tsx  RouteLineLayer.tsx  ThemeToggle.tsx  VerticalProfileView.tsx
frontend/src/data/: airports.json
frontend/src/hooks/: use-airport-metar.ts  use-airport.ts  use-airports.ts  use-auto-rotate.ts  use-flight-region.ts  use-flight-route.ts  use-flight-trail.ts  use-flights.ts  use-follow-flight.ts  use-globe-click.ts  use-keyboard-shortcuts.ts  use-risk-stream.ts  use-sigmets.ts  use-viewport-bbox.ts
scripts/: smoke.ps1  start.ps1
(+14 files in other folders)
