[package]
name = "aeroshield-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = "0.28"
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
